added an image, background color

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
   <div class="banner"> 
-   
-    <!-- место для изображения -->
+   <img src="example.png" alt="banner">
   </div>
   <nav class="navbar">
     <a href="">Museen & Einrichtungen</a>
